--- a/read_comics/characters/templates/characters/detail.html
+++ b/read_comics/characters/templates/characters/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% load static %}
 
 {% block title %}{{ character.name }}{% endblock %}
@@ -58,7 +59,7 @@
                        aria-controls="issues" role="tab" aria-selected="false">
                       <i class="fad fa-book-open" aria-hidden="true"></i> <span
                       class="d-none d-md-block pl-50"> Issues </span><span
-                      class="ml-1 badge badge-pill badge-round badge-info">{{ issues_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ issues_count|intcomma }}</span></a>
 
                   </li>
                 {% endif %}
@@ -70,7 +71,7 @@
                        aria-controls="volumes" role="tab" aria-selected="false">
                       <i class="fad fa-book-spells" aria-hidden="true"></i> <span
                       class="d-none d-md-block pl-50"> Volumes </span><span
-                      class="ml-1 badge badge-pill badge-round badge-info">{{ volumes_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ volumes_count|intcomma }}</span></a>
 
                   </li>
                 {% endif %}
@@ -82,7 +83,7 @@
                        aria-controls="died" role="tab" aria-selected="false">
                       <i class="fad fa-skull" aria-hidden="true"></i> <span
                       class="d-none d-md-block pl-50"> Died in issues</span><span
-                      class="ml-1 badge badge-pill badge-round badge-danger">{{ died_in_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ died_in_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -92,7 +93,7 @@
                        href="#authors"
                        aria-controls="authors" role="tab" aria-selected="false">
                       <i class="fad fa-people-carry" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Authors</span><span
-                      class="ml-1 badge badge-pill badge-round badge-info">{{ authors_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ authors_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -103,7 +104,7 @@
                        aria-controls="friends" role="tab" aria-selected="false">
                       <i class="fad fa-bat" aria-hidden="true"></i> <span
                       class="d-none d-md-block pl-50"> Friends</span><span
-                      class="ml-1 badge badge-pill badge-round badge-success">{{ friends_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-success">{{ friends_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -113,7 +114,7 @@
                        href="#enemies"
                        aria-controls="enemies" role="tab" aria-selected="false">
                       <i class="fad fa-user-secret" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Enemies</span><span
-                      class="ml-1 badge badge-pill badge-round badge-danger">{{ enemies_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ enemies_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -124,7 +125,7 @@
                        aria-controls="teams" role="tab" aria-selected="false">
                       <i class="fad fa-users" aria-hidden="true"></i> <span
                       class="d-none d-md-block pl-50"> Teams</span><span
-                      class="ml-1 badge badge-pill badge-round badge-info">{{ teams_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ teams_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -135,7 +136,7 @@
                        aria-controls="team-friends" role="tab" aria-selected="false">
                       <i class="fad fa-users" aria-hidden="true"></i> <span
                       class="d-none d-md-block pl-50"> Team friends</span><span
-                      class="ml-1 badge badge-pill badge-round badge-success">{{ team_friends_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-success">{{ team_friends_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -145,11 +146,11 @@
                        href="#team-enemies"
                        aria-controls="team-enemies" role="tab" aria-selected="false">
                       <i class="fad fa-users" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Team enemies</span><span
-                      class="ml-1 badge badge-pill badge-round badge-danger">{{ team_friends_count }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ team_friends_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
-                {% if request.user.is_staff > 0 %}
+                {% if request.user.is_staff or requst.user.is_superuser %}
 
                   {% if missing_issues_count %}
                     <li class="nav-item pb-1">
@@ -157,7 +158,7 @@
                          href="{% url "missing_issues:category" category='character' slug=object.slug %}">
                         <i class="fad fa-eye"></i> <span
                         class="d-none d-md-block pl-50"> Missing issues <span
-                        class="ml-1 badge badge-pill badge-round badge-danger">{{ missing_issues_count }}</span></span></a>
+                        class="ml-1 badge badge-pill badge-round badge-warning">{{ missing_issues_count|intcomma }}</span></span></a>
                     </li>
                   {% endif %}
 
@@ -299,7 +300,7 @@
       </div>
       <!-- info tab ends -->
 
-      {% if request.user.is_staff %}
+      {% if request.user.is_staff or request.user.is_superuser %}
         <!-- tech info tab starts -->
         <div class="tab-pane fade" id="tech" aria-labelledby="tech-tab" role="tabpanel">
           <div class="row">
