--- a/read_comics/publishers/templates/publishers/list.html
+++ b/read_comics/publishers/templates/publishers/list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% load static %}
 {% load url_extras %}
 
@@ -67,8 +68,8 @@
           </div>
           <div class="card-footer">
             <ul class="list-inline list-inline-pipe font-weight-lighter font-size-xsmall">
-              <li>{{ publisher.volume_count }} volume{{ publisher.volume_count|pluralize }}</li>
-              <li>{{ publisher.issue_count }} issues{{ publisher.issue_count|pluralize }}</li>
+              <li>{{ publisher.volume_count|intcomma }} volume{{ publisher.volume_count|pluralize }}</li>
+              <li>{{ publisher.issue_count|intcomma }} issues{{ publisher.issue_count|pluralize }}</li>
             </ul>
           </div>
         </div>
