--- a/read_comics/teams/templates/teams/list.html
+++ b/read_comics/teams/templates/teams/list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 {% load static %}
 {% load url_extras %}
 
@@ -84,8 +85,8 @@
               {% if team.publisher %}
                 <li>{{ team.publisher.name }}</li>
               {% endif %}
-              <li>{{ team.volume_count }} volume{{ team.volume_count|pluralize }}</li>
-              <li>{{ team.issue_count }} issues{{ team.issue_count|pluralize }}</li>
+              <li>{{ team.volume_count|intcomma }} volume{{ team.volume_count|pluralize }}</li>
+              <li>{{ team.issue_count|intcomma }} issues{{ team.issue_count|pluralize }}</li>
             </ul>
           </div>
         </div>
