--- a/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
-{% load url_extras %}
+
 {% load static %}
 
 {% block title %}
@@ -33,17 +33,9 @@
 {% endblock %}
 
 {% block page_content %}
-
+<div id="table-wrapper">
   {% include 'missing_issues/issues_table.html' with missing_issues=missing_issues all_cols=True %}
-  <nav aria-label="Page navigation">
-    <ul class="pagination pagination-borderless justify-content-center mt-2">
-      {% for page in pages %}
-        <li class="page-item {{ page.disabled }} {{ page.active }}"><a class="page-link"
-                                                                       href="{% url_add_query_params page=page.num %}">{{ page.num }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-  </nav>
+  </div>
 {% endblock %}
 
 {% block modals %}
@@ -55,4 +47,5 @@
 
 {% block page_js %}
   {{ block.super }}
+  <script src="{% static "missing_issues/js/missing_issues.js" %}"></script>
 {% endblock %}
