--- a/read_comics/static/css/detail.css
+++ b/read_comics/static/css/detail.css
@@ -100,6 +100,12 @@
   right: 20px;
 }
 
+.page-detail #watch-mark {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
 
 .detail-full-description figure {
   margin: 0 2rem 2rem 0;
