--- a/read_comics/story_arcs/templates/story_arcs/detail.html
+++ b/read_comics/story_arcs/templates/story_arcs/detail.html
@@ -35,6 +35,15 @@
               <div id="finished-mark" {% if not finished %}style="display: none" {% endif %}>
                 <i class="far fa-check-circle success fa-3x"></i>
               </div>
+              <div id="watch-mark">
+                {% if watched %}
+                  <a href="{% url "story_arcs:stop_watch" object.slug %}" data-toggle="tooltip" data-placement="bottom"
+                     title="Stop watching"><i class="fad fa-eye success fa-3x"></i></a>
+                {% elif user.is_staff or user.is_superuser %}
+                  <a href="{% url "story_arcs:start_watch" object.slug %}" data-toggle="tooltip" data-placement="bottom"
+                     title="Start watching"><i class="fad fa-eye-slash info fa-3x"></i></a>
+                {% endif %}
+              </div>
             </div>
             <!-- detail nav tabs start -->
             <div class="card-body px-0">
@@ -46,8 +55,8 @@
                 <p>{{ story_arc.short_description|default_if_none:"" }}</p>
               </div>
               <ul
-                  class="nav detail-nav justify-content-center justify-content-md-start nav-tabs border-bottom-0 mb-0"
-                  role="tablist">
+                class="nav detail-nav justify-content-center justify-content-md-start nav-tabs border-bottom-0 mb-0"
+                role="tablist">
                 <li class="nav-item pb-1">
                   <a class="nav-link d-flex px-1 active" id="info-tab" data-toggle="tab"
                      href="#info"
@@ -61,8 +70,8 @@
                        href="#issues"
                        aria-controls="issues" role="tab" aria-selected="false">
                       <i class="fad fa-book-open" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Issues </span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ issue_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Issues </span><span
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ issue_count|intcomma }}</span></a>
 
                   </li>
                 {% endif %}
@@ -73,8 +82,8 @@
                        href="#volumes"
                        aria-controls="volumes" role="tab" aria-selected="false">
                       <i class="fad fa-book-spells" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Volumes </span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ volumes_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Volumes </span><span
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ volumes_count|intcomma }}</span></a>
 
                   </li>
                 {% endif %}
@@ -85,8 +94,8 @@
                        href="#characters"
                        aria-controls="characters" role="tab" aria-selected="false">
                       <i class="fad fa-bat" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Characters </span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ characters_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Characters </span><span
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ characters_count|intcomma }}</span></a>
 
                   </li>
                 {% endif %}
@@ -97,8 +106,8 @@
                        href="#died"
                        aria-controls="died" role="tab" aria-selected="false">
                       <i class="fad fa-skull" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Characters died</span><span
-                        class="ml-1 badge badge-pill badge-round badge-danger">{{ characters_died_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Characters died</span><span
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ characters_died_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -108,8 +117,8 @@
                        href="#concepts"
                        aria-controls="concepts" role="tab" aria-selected="false">
                       <i class="fad fa-brain" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Concepts</span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ concepts_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Concepts</span><span
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ concepts_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -119,7 +128,7 @@
                        href="#locations"
                        aria-controls="locations" role="tab" aria-selected="false">
                       <i class="fad fa-map-marker-alt" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Locations</span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ locations_count|intcomma }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ locations_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -129,8 +138,8 @@
                        href="#objects"
                        aria-controls="objects" role="tab" aria-selected="false">
                       <i class="fad fa-swords" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Objects</span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ objects_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Objects</span><span
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ objects_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -140,7 +149,7 @@
                        href="#authors"
                        aria-controls="authors" role="tab" aria-selected="false">
                       <i class="fad fa-people-carry" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Authors</span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ authors_count|intcomma }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ authors_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -150,8 +159,8 @@
                        href="#teams"
                        aria-controls="teams" role="tab" aria-selected="false">
                       <i class="fad fa-users" aria-hidden="true"></i> <span
-                        class="d-none d-md-block pl-50"> Teams</span><span
-                        class="ml-1 badge badge-pill badge-round badge-info">{{ teams_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> Teams</span><span
+                      class="ml-1 badge badge-pill badge-round badge-info">{{ teams_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -161,7 +170,7 @@
                        href="#disbanded"
                        aria-controls="teams-disbanded" role="tab" aria-selected="false">
                       <i class="fad fa-users-slash" aria-hidden="true"></i> <span class="d-none d-md-block pl-50"> Teams disbanded</span><span
-                        class="ml-1 badge badge-pill badge-round badge-danger">{{ disbanded_teams_count|intcomma }}</span></a>
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ disbanded_teams_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -171,8 +180,8 @@
                        href="#first-appearance"
                        aria-controls="first-appearance" role="tab" aria-selected="false">
                       <i class="fad fa-exclamation"></i> <span
-                        class="d-none d-md-block pl-50"> First appearances</span><span
-                        class="ml-1 badge badge-pill badge-round badge-danger">{{ first_appearance_count|intcomma }}</span></a>
+                      class="d-none d-md-block pl-50"> First appearances</span><span
+                      class="ml-1 badge badge-pill badge-round badge-danger">{{ first_appearance_count|intcomma }}</span></a>
                   </li>
                 {% endif %}
 
@@ -193,24 +202,24 @@
                        href="#tech"
                        aria-controls="tech" role="tab" aria-selected="false">
                       <i class="fad fa-cogs"></i> <span
-                        class="d-none d-md-block pl-50"> Technical info</span></a>
+                      class="d-none d-md-block pl-50"> Technical info</span></a>
                   </li>
                 {% endif %}
               </ul>
               <ul
-                  class="nav detail-nav justify-content-center justify-content-md-start nav-tabs border-bottom-0 mb-0"
-                  role="tablist">
+                class="nav detail-nav justify-content-center justify-content-md-start nav-tabs border-bottom-0 mb-0"
+                role="tablist">
                 <li class="nav-item pb-1">
                   <a class="nav-link d-flex px-1 btn btn-info" id="download-link" href="{{ story_arc.download_link }}">
                     <i class="fad fa-download"></i> <span
-                      class="d-none d-md-block pl-50"> Download (~{{ size|filesizeformat }})</span>
+                    class="d-none d-md-block pl-50"> Download (~{{ size|filesizeformat }})</span>
                   </a>
                 </li>
                 {% if request.user.is_authenticated and not finished %}
                   <li class="nav-item pb-1" id="mark-finished-btn-nav">
                     <button class="nav-link d-flex px-1 btn btn-success" id="mark-finished-btn">
                       <i class="fad fa-check-circle"></i> <span
-                        class="d-none d-md-block pl-50"> Mark as finished</span>
+                      class="d-none d-md-block pl-50"> Mark as finished</span>
                     </button>
                   </li>
                 {% endif %}
@@ -262,7 +271,8 @@
                   </div>
                   <div class="col-12 col-md-8 col-fhd-9">
                     {% if story_arc.first_issue %}
-                      <a href="{% url "story_arcs:issue_detail" story_arc.slug story_arc.first_issue.slug %}">{{ story_arc.first_issue.volume.name }}
+                      <a
+                        href="{% url "story_arcs:issue_detail" story_arc.slug story_arc.first_issue.slug %}">{{ story_arc.first_issue.volume.name }}
                         #{{ story_arc.first_issue.volume.first_issue.number }} {{ story_arc.first_issue.name|default_if_none:'' }}</a>
                     {% else %}
                       {{ story_arc.first_issue_name }}
@@ -278,7 +288,8 @@
 
               </div>
             </div>
-            <img src="{{ story_arc.full_size_url }}" alt="cover" class="mt-1 d-none d-md-block image-full-size" width="100%">
+            <img src="{{ story_arc.full_size_url }}" alt="cover" class="mt-1 d-none d-md-block image-full-size"
+                 width="100%">
           </div>
           <div class="detail-full-description col-12 col-md-6 col-lg-7 col-xxl-8 col-4k-10">
             {{ story_arc.description|default:"<p>No description</p>"|safe }}
@@ -366,7 +377,7 @@
         <!-- issues tab ends -->
       {% endif %}
 
-    {% if volumes_count %}
+      {% if volumes_count %}
         <!-- volumes tab starts -->
         <div class="tab-pane fade badge-tab" id="volumes" aria-labelledby="volumes-tab" role="tabpanel">
           <h3>Volumes</h3>
@@ -467,7 +478,8 @@
 
       {% if first_appearance_count %}
         <!-- disbanded tab starts -->
-        <div class="tab-pane fade badge-tab" id="first-appearance" aria-labelledby="first-appearance-tab" role="tabpanel">
+        <div class="tab-pane fade badge-tab" id="first-appearance" aria-labelledby="first-appearance-tab"
+             role="tabpanel">
           <div class="tab-content">
             {% include "blocks/detail/badges.html" with objects=first_appearances_first_page.object_list pages=first_appearances_pages get_page_function="getFirstAppearancesPage" break_groups=True %}
           </div>
