--- a/read_comics/templates/blocks/layout/header/header.html
+++ b/read_comics/templates/blocks/layout/header/header.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <!-- BEGIN: Header-->
 <div class="header-navbar-shadow"></div>
 <nav class="header-navbar main-header-navbar navbar-expand-lg navbar navbar-with-menu fixed-top ">
@@ -27,7 +28,8 @@
 
               <form class="row" id="search-form" autocomplete="off" action="{% url "search:search" %}">
 
-                <select class="form-control input col-auto" id="search_category_select" name="category" onchange="$('#search_query_input').trigger('keyup');">
+                <select class="form-control input col-auto" id="search_category_select" name="category"
+                        onchange="$('#search_query_input').trigger('keyup');">
                   <option value="all" selected>All</option>
                   <option value="characters">Characters</option>
                   <option value="concepts">Concepts</option>
@@ -42,7 +44,8 @@
 
                 </select>
                 <div class="col">
-                  <input autocomplete="off" class="input col-auto" id="search_query_input" type="text" placeholder="Search..." tabindex="-1"
+                  <input autocomplete="off" class="input col-auto" id="search_query_input" type="text"
+                         placeholder="Search..." tabindex="-1"
                          name="q">
                 </div>
 
@@ -51,6 +54,16 @@
               <ul class="search-list"></ul>
             </div>
           </li>
+          {% if watched_missing_issues_count > 0 %}
+            <li class="nav-item dropdown-notification">
+              <a class="nav-link nav-link-label" href="app-email.html" data-toggle="tooltip" data-placement="top"
+                 title="" data-original-title="Email">
+                <i class="ficon fad fa-eye"></i>
+                <span class="badge badge-pill badge-warning badge-up">{{ watched_missing_issues_count|intcomma }}</span>
+              </a>
+            </li>
+          {% endif %}
+
           {% if request.user.is_authenticated %}
             {% include "blocks/layout/header/messages.html" %}
             <li class="dropdown dropdown-user nav-item">
