fix: Missing issue countes now update after skip/ignore w/o page refresh

--- a/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
+++ b/read_comics/missing_issues/templates/missing_issues/missing_issues_list.html
@@ -17,11 +17,8 @@
   {% else %}
     Missing issues
   {% endif %}
-  <div class="chip chip-warning mr-1">
-    <div class="chip-body">
-      <span class="chip-text">{{ paginator.object_list.count|intcomma }}</span>
-    </div>
-  </div>
+  <span class="badge badge-warning badge-pill badge-round float-right ml-auto" id="this-missing-count-badge">{{ paginator.object_list.count|intcomma }}</span>
+
 {% endblock %}
 
 {% block vendor_css %}
