--- a/read_comics/missing_issues/templates/missing_issues/issues_table.html
+++ b/read_comics/missing_issues/templates/missing_issues/issues_table.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 {% load url_extras %}
 
 <table class="table" id="issues-table">
@@ -49,6 +50,10 @@
   {% endfor %}
   </tbody>
 </table>
+<input type="hidden" id="all-missing-count" value="{{ total_missing_issues_count|default:0|intcomma }}">
+<input type="hidden" id="watched-missing-count" value="{{ watched_missing_issues_count|default:0|intcomma }}">
+<input type="hidden" id="this-missing-count" value="{{ paginator.object_list.count|default:0|intcomma}}">
+
 <nav aria-label="Page navigation">
     <ul class="pagination pagination-borderless justify-content-center mt-2">
       {% for page in pages %}
