new: Added finished mark on issues sublists

--- a/read_comics/objects/templates/objects/badges_urls/issue.html
+++ b/read_comics/objects/templates/objects/badges_urls/issue.html
@@ -1,1 +1,1 @@
-<a href="{% url "people:issue_detail" parent_slug slug %}" class="div-default-link"></a>
+<a href="{% url "objects:issue_detail" parent_slug slug %}" class="div-default-link"></a>
